# suomisf

./: .env  .env.back  .flaskenv  .gitignore  .http  .pdm-python  API_DOCUMENTATION.md  API_README.md  API_ROUTES_GENERATED.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Procfile  README.md  alembic.ini  ambigious_names.md  api_documentation.html  api_routes_summary.json  bib_import.py  bib_test.html  config.py  data-er.gv  db-schema-old.gv  db-schema.dbml  db-schema.gv  generate_api_docs.py  import_all  import_awards.py  import_images.py  import_magazines.py  import_stories.py  issues.txt  misc.csv  pyproject.toml  requirements.txt  run_migration.py  setup_test_env  suomisf.db  suomisf.ini  suomisf.py  (+1 more)
app/: .__init__.py.un~  __init__.py  __init__.py.save  api.py  api_articles.py  api_awards.py  api_bookseries.py  api_changes.py  api_countries.py  api_editions.py  api_errors.py  api_helpers.py  api_issues.py  api_jwt.py  api_kirjasampo.py  api_magazines.py  api_pageview.py  api_people.py  api_pricing.py  api_publishers.py  api_pubseries.py  api_roles.py  api_schemas.py  api_shorts.py  api_stats.py  api_tags.py  api_users.py  api_wikimedia.py  api_wishlist.py  api_works.py  config.py  forms.py  impl.py  impl_articles.py  impl_award_import.py  impl_awards.py  impl_bookseries.py  impl_changes.py  impl_contributors.py  impl_country.py  (+42 more)
bibfiles/: .~lock.awards.csv#  .~lock.works.csv#  Magazines.csv  Magazines_Aikakone_artikkelit.csv  Magazines_Aikakone_lehdet.csv  Magazines_Aikakone_novellit.csv  Magazines_Aikamme_tieteislukemisto_lehdet.csv  Magazines_Aikamme_tieteislukemisto_novellit.csv  Magazines_Alienisti_artikkelit.csv  Magazines_Alienisti_artikkelit_1.csv  Magazines_Alienisti_lehdet.csv  Magazines_Alienisti_novellit.csv  Magazines_FinnZine_artikkelit.csv  Magazines_FinnZine_lehdet.csv  Magazines_FinnZine_novellit.csv  Magazines_Ikaros_artikkelit.csv  Magazines_Ikaros_lehdet.csv  Magazines_Ikaros_novellit.csv  Magazines_Isaac_Asimovin_Science_ Fiction_-valikoima _lehdet.csv  Magazines_Kosmoskynä_artikkelit.csv  Magazines_Kosmoskynä_lehdet.csv  Magazines_Kosmoskynä_novellit.csv  Magazines_Kultakuoriainen_lehdet.csv  Magazines_Kultakuoriainen_novellit.csv  Magazines_Legolas_artikkelit.csv  Magazines_Legolas_lehdet.csv  Magazines_Mytago_artikkelit.csv  (+27 more)
test/: works.http  (+5 more)
(+320 files in other folders)
