[project]
name = "SuomiSF"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marko Poutiainen", email = "regs@sofistes.net"},
]
dependencies = [
    "Flask==2.3.2",
    "python-dotenv>=1.0.1",
    "Bootstrap-Flask==1.3.1",
    "Flask-Login>=0.6.3",
    "Flask-Migrate>=4.0.7",
    "SQLAlchemy==1.4.48",
    "flask-marshmallow>=1.2.1",
    "Flask-Cors>=4.0.1",
    "Flask-JWT-Extended>=4.6.0",
    "PyMySQL>=1.1.1",
    "mysql-connector-python>=9.0.0",
    "bleach>=6.1.0",
    "marshmallow-sqlalchemy>=1.0.0",
    "WTForms==2.3.3",
    "Flask-WTF>=1.2.1",
    "jsonschema>=4.23.0",
    "isbnlib>=3.10.14",
    "gunicorn>=22.0.0",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
